--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-sitemap-item/kiwi-sitemap-item.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-sitemap-item/kiwi-sitemap-item.component.html
@@ -45,7 +45,7 @@
           <button class="dropdown-item" type="button" (click)="movePageStart('move')">
             <i class="fa fa-fw fa-sort"></i> Move Page
           </button>
-          <button class="dropdown-item" type="button" (click)="movePageStart('copy')" *ngIf="!page.pageType.handle">
+          <button class="dropdown-item" type="button" (click)="movePageStart('copy')" *ngIf="false && !page.pageType.handle">
             <i class="fa fa-fw fa-clone"></i> Copy Page
           </button>
           <a class="dropdown-item dropdown-item-info" *ngIf="pageUrl && isOnline" [href]="pageUrl" target="_blank">
