--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-sitemap/kiwi-sitemap.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-sitemap/kiwi-sitemap.component.html
@@ -9,15 +9,16 @@
     </div>
   </div>
   <div class="card-body">
-    <ng-container *ngIf="pages$ | async as pages; else isLoading">
-      <ng-container *ngIf="pages.length > 0; else noPages">
-        <ng-container *ngFor="let page of pages">
+    <ng-container *ngIf="pageIndex$ | async as pageIndex; else isLoading">
+      <ng-container *ngIf="pageIndex.items.length > 0; else noPages">
+        <ng-container *ngFor="let page of pageIndex.items">
           <kiwi-sitemap-item [page]="page" [locale]="selectedLocale" (moved)="pageMoved()"></kiwi-sitemap-item>
         </ng-container>
       </ng-container>
       <ng-template #noPages>
         There are no pages - Please create a page first
       </ng-template>
+      <a [routerLink]="'create/' + selectedLocale" class="btn btn-success btn-block mt-2" *ngIf="pageIndex.allowedAddingRoot" (click)="addRootPage()">Add Root Page</a>
     </ng-container>
     <ng-template #isLoading>
       <div class="p-3">
