--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page/edit/page-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page/edit/page-edit.component.html
@@ -28,19 +28,28 @@
         </ng-template>
         <div class="p-3">
 
-          <ng-container *ngIf="data$ | async as data">
+          <ng-container *ngIf="pageData">
             <div class="row mb-3">
               <div class="col">
-                <a class="btn btn-primary btn-block" [href]="data.page.url" target="_blank">
-                  <i class="fa fa-eye"></i> Open Page
-                </a>
+                <form ngNoForm method="post" [action]="previewUrl + '?pageId=' + pageData.id" target="preview" *ngIf="versionForm">
+                    <input type="hidden" name="preview" value="{{ versionForm.getRawValue() | json }}">
+                    <button type="submit" class="btn btn-primary btn-block">
+                      <i class="fa fa-eye"></i> Preview
+                    </button>
+                </form>
               </div>
               <div class="col-auto">
-                <button class="btn btn-danger" (click)="doDelete()">
+                <button class="btn btn-danger" (click)="doDelete()" >
                   <i class="fa fa-trash"></i>
                 </button>
               </div>
             </div>
+          </ng-container>
+
+          <ng-container *ngIf="data$ | async as data" >
+            <a class="btn btn-default btn-block" [href]="data.page.url" target="_blank" *ngIf="data.page.isOnline">
+              <i class="fa fa-expand"></i> Open Page
+            </a>
           </ng-container>
 
           <div class="kiwi-form" *ngIf="pageData">
@@ -80,7 +89,6 @@
                 <small class="form-text text-muted">The slug is used to create the Website URL</small>
               </div>
             </div>
-
             <div class="form-group kiwi-toggle-right">
               <label class="kiwi-form-label">
                 Online<b class="text-danger">*</b>
@@ -105,8 +113,7 @@
               </label>
               <div class="kiwi-form-control-container">
                 <div class="input-group">
-                  <kiwi-date-picker placeholder="Published From"
-                                    [(ngModel)]="pageData.publishedFrom"></kiwi-date-picker>
+                  <kiwi-date-picker placeholder="Published From" [(ngModel)]="pageData.publishedFrom"></kiwi-date-picker>
                   <div class="input-group-append">
                     <button type="button" class="btn btn-outline-primary"
                             (click)="savePageData('publishedFrom', pageData.publishedFrom)">
@@ -160,12 +167,13 @@
           </div>
         </div>
       </tab>
+      <!--
       <tab>
         <ng-template tabHeading>
           <i class="fa fa-wrench"></i>
         </ng-template>
         <div class="p-3">
-          <!--
+
           <ng-container *ngIf="detailData$ | async as detailData">
             <ng-container *ngIf="detailData.meta.otherLanguages.length > 0">
               <h6><i class="fa fa-fw fa-clone"></i> Replace Content</h6>
@@ -192,9 +200,10 @@
               <hr>
             </ng-container>
           </ng-container>
-          -->
+
         </div>
       </tab>
+      -->
       <tab>
         <ng-template tabHeading>
           <i class="fa fa-list"></i>
@@ -213,9 +222,10 @@
                         <small class="text-muted">{{ element.createdAt | date:'yyyy-MM-dd HH:mm' }}</small>
                       </div>
                       <div class="mt-1">
-                        <button class="btn btn-sm btn-outline-success mr-1" title="Approve"><i class="fa fa-thumbs-up"></i></button>
-                        <button class="btn btn-sm btn-outline-primary mr-1" title="Replace"><i class="fa fa-history"></i></button>
-                        <button class="btn btn-sm btn-outline-danger" title="Delete"><i class="fa fa-trash"></i></button>
+                        <a *ngIf="pageData" [href]="previewUrl + '?pageId=' + pageData.id + '&versionId=' + element.id" class="btn btn-sm btn-outline-success mr-1" title="Preview" target="preview"><i class="fa fa-eye"></i></a>
+                        <!--<button class="btn btn-sm btn-outline-success mr-1" title="Approve"><i class="fa fa-thumbs-up"></i></button>-->
+                        <!--<button class="btn btn-sm btn-outline-primary mr-1" title="Replace"><i class="fa fa-history"></i></button>-->
+                        <!--<button class="btn btn-sm btn-outline-danger" title="Delete"><i class="fa fa-trash"></i></button>-->
                       </div>
                     </div>
                     <div class="col-auto">
