--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
@@ -377,3 +377,8 @@ formly-wrapper-validation-messages > div > .invalid-feedback {
     }
   }
 }
+
+.input-disabled {
+  pointer-events: none;
+  opacity: .3;
+}
