--- a/projects/kiwi-suite/ngx-admin/src/lib/dashboard/kiwi-statistics-overview/kiwi-statistics-overview.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/dashboard/kiwi-statistics-overview/kiwi-statistics-overview.component.html
@@ -1,19 +1,21 @@
 <div class="card" *ngIf="data">
   <div class="card-body">
-    <div class="row">
-      <div class="col-sm-6" *ngIf="data.progress.length > 0">
-        <div *ngFor="let progress of data.progress" class="mb-3">
-          <progressbar [max]="progress.max" [value]="progress.current" type="warning">
-            <span class="text-nowrap">{{progress.current}} / {{progress.max}} {{ progress.title }}</span>
-          </progressbar>
+    <div *ngFor="let element of data; let index = index">
+      <hr *ngIf="index !== 0"/>
+      <h6 class="mb-3">{{ element.name }}</h6>
+      <div class="row align-items-center">
+        <div class="col-sm-6" *ngIf="element.progress.length > 0">
+          <div *ngFor="let progress of element.progress; let index = index" [class.mt-3]="index !== 0">
+            <div class="custom-progress">
+              <div class="custom-progress-bar-bg" [style.background-color]="progress.color"></div>
+              <div class="custom-progress-bar" [style.width]="(progress.current / progress.max * 100) + '%'" [style.background-color]="progress.color"></div>
+              <div class="custom-progress-text">{{progress.current}} / {{progress.max}} {{ progress.title }}</div>
+            </div>
+          </div>
         </div>
-      </div>
-
-      <div class="col-sm-2" *ngFor="let counter of data.counter">
-        <div class="callout" [ngStyle]="{'border-left-color': counter.color }">
-          <small class="text-muted">{{ counter.title }}</small>
-          <br>
-          <strong class="h4">{{ counter.counter }}</strong>
+        <div class="col-sm-2" *ngFor="let counter of element.counter">
+          <h2 class="mb-0" [style.color]="counter.color">{{ counter.counter }}</h2>
+          <div class="text-muted text-uppercase font-weight-bold">{{ counter.title }}</div>
         </div>
       </div>
     </div>
