--- a/projects/kiwi-suite/ngx-admin/src/lib/views/dashboard/dashboard.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <kiwi-content>
   <ng-container *ngIf="data$ | async as data">
     <div class="row">
-      <div *ngFor="let widget of data.items" class="col-12 col-sm-12" [ngClass]="{'col-md-12': widget.size === 3, 'col-md-8': widget.size === 2, 'col-md-4': widget.size === 1}">
+      <div *ngFor="let widget of data.items" [ngClass]="{'col-md-12': widget.size === 3, 'col-md-8': widget.size === 2, 'col-md-4': widget.size === 1}">
         <ng-container *ngIf="widget.type === 'slideshow'">
           <kiwi-dashboard-slideshow [data]="widget.data"></kiwi-dashboard-slideshow>
         </ng-container>
