--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -219,3 +219,47 @@
 .modal-map {
   height: 250px;
 }
+
+.custom-progress {
+  height: 21px;
+  line-height: 21px;
+  overflow: hidden;
+  font-size: 0.8rem;
+  border-radius: 0.25rem;
+  background: #fff;
+  position: relative;
+
+  .custom-progress-bar-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: .4;
+    background: $primary;
+    z-index: 0;
+  }
+
+  .custom-progress-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    max-width: 100%;
+    background: $primary;
+    z-index: 1;
+    border-radius: 0.25rem;
+  }
+
+  .custom-progress-text {
+    position: absolute;
+    top: 0;
+    left: 5px;
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    font-weight: bold;
+    color: #fff;
+    z-index: 2;
+  }
+}
