added gallery widget

--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-dashboard/kiwi-dashboard.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-dashboard/kiwi-dashboard.component.html
@@ -10,6 +10,9 @@
       <ng-container *ngIf="widget.type === 'statistic-overview'">
         <kiwi-dashboard-statistics-overview [data]="widget.data"></kiwi-dashboard-statistics-overview>
       </ng-container>
+      <ng-container *ngIf="widget.type === 'gallery'">
+        <kiwi-dashboard-gallery [data]="widget.data"></kiwi-dashboard-gallery>
+      </ng-container>
     </div>
   </div>
 </ng-container>
