add graph widget

--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-dashboard/kiwi-dashboard.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-dashboard/kiwi-dashboard.component.html
@@ -13,6 +13,9 @@
       <ng-container *ngIf="widget.type === 'gallery'">
         <kiwi-dashboard-gallery [data]="widget.data"></kiwi-dashboard-gallery>
       </ng-container>
+      <ng-container *ngIf="widget.type === 'graph'">
+        <kiwi-dashboard-graph [data]="widget.data"></kiwi-dashboard-graph>
+      </ng-container>
     </div>
   </div>
 </ng-container>
