tab active style change

--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -80,6 +80,15 @@
   text-overflow: ellipsis;
 }
 
+.main .nav-tabs {
+  .nav-link {
+    &.active {
+      font-weight: bold;
+      color: $primary;
+    }
+  }
+}
+
 .aside-menu {
   top: $navbar-height;
 
