--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -272,3 +272,21 @@
     z-index: 2;
   }
 }
+
+.current-media {
+  background: $primary;
+  padding: ($spacer / 1.5) ($spacer * 2);
+  margin-bottom: -2px;
+  color: #fff;
+  line-height: 1.1em;
+
+  .is-top {
+    @include border-top-radius($border-radius);
+  }
+
+  img {
+    width: auto;
+    height: 50px;
+    border-radius: $border-radius;
+  }
+}
