added sortable setting for datatable

--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
@@ -57,6 +57,7 @@
           <ngx-datatable-column
             [name]="data.name"
             [prop]="data.prop"
+            [sortable]="data.sortable"
             [headerClass]="data.headerClass"
             [cellClass]="data.cellClass"
             [cellTemplate]="data.cellTemplate"
@@ -67,6 +68,7 @@
           <ngx-datatable-column
             [name]="data.name"
             [prop]="data.prop"
+            [sortable]="data.sortable"
             [headerClass]="data.headerClass"
             [cellClass]="data.cellClass"
             [canAutoResize]="data.canAutoResize"
