added widget support for list/create resource views

--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/create/resource-create.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/create/resource-create.component.html
@@ -7,6 +7,9 @@
       <i class="fa fa-plus"></i> Create
     </button>
   </ng-template>
+  <ng-container *ngIf="aboveWidgetData$ | async as data">
+    <kiwi-dashboard [data]="data"></kiwi-dashboard>
+  </ng-container>
 
   <div class="card card-accent-primary">
     <div class="card-header custom-card-header">
@@ -27,4 +30,8 @@
       <b class="text-danger">*</b> Required Field
     </div>
   </div>
+
+  <ng-container *ngIf="belowWidgetData$ | async as data">
+    <kiwi-dashboard [data]="data"></kiwi-dashboard>
+  </ng-container>
 </kiwi-content>
