--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource.component.html
@@ -4,6 +4,12 @@
   </ng-template>
 
   <ng-container *ngIf="resourceKey">
+    <ng-container *ngIf="aboveWidgetData$ | async as data">
+      <kiwi-dashboard [data]="data"></kiwi-dashboard>
+    </ng-container>
     <kiwi-datatable [resource]="resourceKey"></kiwi-datatable>
+    <ng-container *ngIf="belowWidgetData$ | async as data">
+      <kiwi-dashboard [data]="data"></kiwi-dashboard>
+    </ng-container>
   </ng-container>
 </kiwi-content>
