--- a/projects/ixocreate/ngx-admin/src/lib/views/account/account.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/account/account.component.html
@@ -1,4 +1,4 @@
-<ixocreate-content>
+<kiwi-content>
   <ng-container *ngIf="accountData.user$ | async as user">
     <div class="row">
       <div class="col-md">
@@ -37,4 +37,4 @@
       </div>
     </div>
   </ng-container>
-</ixocreate-content>
+</kiwi-content>
