--- a/projects/ixocreate/ngx-admin/src/lib/containers/default-layout/default-layout.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/containers/default-layout/default-layout.component.html
@@ -55,6 +55,6 @@
     &copy; {{ config.config.project.copyright }} {{ config.config.project.author }}.
   </div>
   <div *ngIf="config.config.project.poweredBy" class="ml-auto text-muted">
-    powered by <a href="https://github.com/ixocreate/kiwi" target="_blank">kiwi</a>
+    powered by <a href="https://github.com/ixocreate/ixocreate" target="_blank">IXOCREATE</a>
   </div>
 </app-footer>
