--- a/projects/ixocreate/ngx-admin/src/lib/views/account/account.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/account/account.component.html
@@ -36,5 +36,30 @@
         </form>
       </div>
     </div>
+    <div class="card card-accent-primary">
+      <div class="card-header">Change <b>Additional Attributes</b></div>
+      <div class="card-body">
+        <ng-container *ngIf="additionalForm && additionalFields; else isLoading">
+          <formly-form [form]="additionalForm" [fields]="additionalFields" [model]="user" class="kiwi-form kiwi-form-inline" (ngSubmit)="onSubmitAttributes()">
+          </formly-form>
+        </ng-container>
+        <ng-template #isLoading>
+          <div class="text-center my-3 loading">
+            <kiwi-loading class="big-center"></kiwi-loading>
+          </div>
+        </ng-template>
+      </div>
+      <div class="card-footer">
+        <div class="text-right">
+          <button type="submit" class="btn btn-primary" (click)="onSubmitAttributes()">
+            <i class="fa fa-save"></i> Change Attributes
+          </button>
+        </div>
+        <div class="text-muted">
+          <b class="text-danger">*</b> Required Field
+        </div>
+      </div>
+    </div>
   </ng-container>
+
 </kiwi-content>
