--- a/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_layout.scss
@@ -1,3 +1,10 @@
+.btn-warning {
+  &,
+  &:hover {
+    color: #fff;
+  }
+}
+
 .btn-outline-input {
   @include button-outline-variant($input-border-color);
   background: #fff;
