--- a/projects/ixocreate/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
@@ -142,6 +142,7 @@
 
 <ng-template #buttonColumnTemplate let-row="row" let-value="value" let-i="index">
   <div class="text-right">
+    <a class="btn btn-sm btn-warning mr-1" [routerLink]="row.id + '/view'" *ngIf="resourceInfo && resourceInfo.canView "><i class="fa fa-eye"></i> View</a>
     <a class="btn btn-sm btn-primary" [routerLink]="row.id + '/edit'"><i class="fa fa-pencil"></i> Edit</a>
   </div>
 </ng-template>
